Fixed gallery navbar z-index bug

--- a/src/views/Gallery/Gallery.scss
+++ b/src/views/Gallery/Gallery.scss
@@ -3,7 +3,7 @@
   $brightness: 0.5;
 
   position: relative;
-  z-index: 20;
+  z-index: 14;
   color: white;
   overflow-x: hidden;
   overflow-y: auto;
